[package]
name = "day_13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
anyhow = "1.0.66"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
